Enum user_role {
  CUSTOMER
  COURIER
  DISPATCHER
  ADMIN
}

Enum vehicle_type {
  BICYCLE
  MOTORCYCLE
  CAR
  VAN
}

Enum order_status {
  PENDING
  ASSIGNED
  ACCEPTED
  IN_TRANSIT
  DELIVERED
  CANCELLED
}

Table users {
  id varchar(32) [pk, note: 'Prefixed identifier (usr_...)']
  email varchar(255) [unique, not null, note: 'Login email address']
  password_hash varchar(255) [not null, note: 'Argon2id/bcrypt credential hash']
  full_name varchar(150) [not null, note: 'Legal user name']
  role user_role [not null, default: 'CUSTOMER', note: 'RBAC authorization level']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    email [name: 'idx_users_email']
  }
}

Table couriers {
  id varchar(32) [pk, note: 'Prefixed identifier (cur_...)']
  user_id varchar(32) [unique, not null, ref: - users.id, note: '1:1 binding to base user account']
  vehicle_type vehicle_type [not null, default: 'MOTORCYCLE', note: 'Vehicle classification']
  plate_number varchar(20) [null, note: 'License plate (nullable for bikes)']
  is_verified boolean [not null, default: false, note: 'KYC verification state']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    user_id [name: 'idx_couriers_user_id']
  }
}

Table orders {
  id varchar(32) [pk, note: 'Prefixed identifier (ord_...)']
  customer_id varchar(32) [not null, ref: > users.id, note: 'FK to requesting customer']
  courier_id varchar(32) [null, ref: > couriers.id, note: 'FK to assigned driver (populated by Dispatch Engine)']
  status order_status [not null, default: 'PENDING', note: 'Lifecycle state']
  pickup_location jsonb [not null, note: 'Pickup GPS & address object {lat, lng}']
  dropoff_location jsonb [not null, note: 'Drop-off GPS & address object {lat, lng}']
  total_amount numeric(12,2) [not null, note: 'Calculated delivery fare']
  currency varchar(3) [not null, default: 'COP', note: 'ISO 4217 currency code']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    customer_id [name: 'idx_orders_customer_id']
    courier_id [name: 'idx_orders_courier_id']
    status [name: 'idx_orders_status']
  }
}

Table audit_logs {
  id bigserial [pk, note: 'Auto-incrementing sequence identifier']
  event_id uuid [unique, not null, note: 'Standard event envelope UUID v4 for deduplication']
  order_id varchar(32) [null, ref: > orders.id, note: 'Correlated order ID']
  event_type varchar(100) [not null, note: 'AMQP routing key/event name']
  producer varchar(50) [not null, note: 'Origin microservice name']
  payload jsonb [not null, note: 'Complete raw JSON payload']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    event_id [unique, name: 'idx_audit_logs_event_id']
    order_id [name: 'idx_audit_logs_order_id']
  }
}
